syntax = "proto3";

package backend.v1;

import "backend/v1/messages.proto";

service UserService {
  // 指定された User を取得する
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  // User を新たに作成する
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

service AuthService {
  // ログイン
  rpc Login(LoginRequest) returns (LoginResponse);
  // ログアウト
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

service HealthcheckService {
  rpc Ping(PingRequest) returns (PingResponse);
}

service QuestionService {
  rpc CreateQuestion(CreateQuestionRequest) returns (CreateQuestionResponse);
  rpc GetQuestion(GetQuestionRequest) returns (GetQuestionResponse);
  rpc GetQuestionList(GetQuestionListRequest) returns (GetQuestionListResponse);
  rpc UpdateQuestion(UpdateQuestionRequest) returns (UpdateQuestionResponse);
  rpc DeleteQuestion(DeleteQuestionRequest) returns (DeleteQuestionResponse);
}

service AnswerService {
  rpc CreateAnswer(CreateAnswerRequest) returns (CreateAnswerResponse);
  rpc GetAnswer(GetAnswerRequest) returns (GetAnswerResponse);
  rpc GetAnswerList(GetAnswerListRequest) returns (GetAnswerListResponse);
  rpc GetAnswerListByQuestionId(GetAnswerListByQuestionIdRequest) returns (GetAnswerListByQuestionIdResponse);
  rpc UpdateAnswer(UpdateAnswerRequest) returns (UpdateAnswerResponse);
  rpc DeleteAnswer(DeleteAnswerRequest) returns (DeleteAnswerResponse);
}
